# DreamTeamGPT

./: .env.example  LICENSE  Makefile  README.md  constants.py  logger_config.py  main.py  make_project_structure.sh  named_executives.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: style.yml
agents/: agent.py  chairman.py  executive.py  idea_refiner.py  secretary.py  sme.py
clients/: base.py  config.py  get_client.py  gpt_client.py
dream_team_gpt/: main.py  meeting.py
dream_team_gpt/agents/: __init__.py  agent.py  chairman.py  idea_refiner.py  secretary.py  sme.py
dream_team_gpt/clients/: __init__.py  base.py  config.py  get_client.py  gpt_client.py
dream_team_gpt/constants/: __init__.py  default_sme.py
dream_team_gpt/utils/: __init__.py  logging.py  parse_config.py  print_with_wrap.py  token_counter.py
gpt/: gpt_client.py
tests/: test_token_counter.py  test_transcript.py
utils/: parse_config.py  pretty_print_with_wrap.py  print_with_wrap.py  token_counter.py
